[package]
name = "nom-both"
version = "0.1.0"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/nom-both"
keywords = ["parser", "nom"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "Extension of nom to provide special both_ parsers"
edition = "2018"

[dependencies]
nom             = "5.0.0"
nom-both-macros = {path = "../nom-both-macros", version = "0.1.0"}

[package.metadata.release]
pre-release-replacements = [
    {file = "../README.md", search = "nom-both = \"[a-z0-9\\.-]+\"", replace = "nom-both = \"{{version}}\""},
    {file = "../CHANGELOG.md", search = "Unreleased", replace = "v{{version}}"},
    {file = "../CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}"},
    {file = "../CHANGELOG.md", search = "Change Log", replace = "Change Log\n\n## [Unreleased](https://github.com/dalance/nom-both/compare/v{{version}}...Unreleased) - ReleaseDate"},
]
